[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Puzzle Pier/Streetlamp A.tscn" type="PackedScene" id=13]
[ext_resource path="res://Objects/Collision/Navmesh.tscn" type="PackedScene" id=23]
[ext_resource path="res://Objects/Collision/NavmeshLayer.tscn" type="PackedScene" id=25]
[ext_resource path="res://Objects/SceneTransition/PlayerSpawnLocation.tscn" type="PackedScene" id=26]
[ext_resource path="res://Objects/SceneTransition/Doorway.tscn" type="PackedScene" id=27]
[ext_resource path="res://Assets/General/Shadows/circle shadow small.png" type="Texture" id=28]
[ext_resource path="res://UI/Battle/Battle Dialogue.png" type="Texture" id=29]
[ext_resource path="res://Scripts/Objects/SceneTransition/Exit.gd" type="Script" id=30]
[ext_resource path="res://Misc/Font/Dialogue.tres" type="DynamicFont" id=31]
[ext_resource path="res://Assets/General/Shadows/square shadow.png" type="Texture" id=32]
[ext_resource path="res://Assets/Puzzle Pier/pier_fence_a.png" type="Texture" id=33]
[ext_resource path="res://Objects/Collision/CollidableBox.tscn" type="PackedScene" id=34]
[ext_resource path="res://Scripts/Area_Specific/Puzzle_Pier_2.gd" type="Script" id=35]
[ext_resource path="res://Scripts/SimpleCamera2D.gd" type="Script" id=36]
[ext_resource path="res://Assets/General/Shadows/rectangle shadow small.png" type="Texture" id=39]
[ext_resource path="res://Assets/Puzzle Pier/pier_bench_a.png" type="Texture" id=41]
[ext_resource path="res://Assets/Puzzle Pier/flowerbox_a.png" type="Texture" id=44]
[ext_resource path="res://Assets/Puzzle Pier/pier_fence_b.png" type="Texture" id=47]
[ext_resource path="res://Assets/Puzzle Pier/board_pole.png" type="Texture" id=52]
[ext_resource path="res://Assets/General/Backgrounds/blue bckgd.png" type="Texture" id=53]
[ext_resource path="res://Scripts/Item_Interact.gd" type="Script" id=54]
[ext_resource path="res://Assets/General/Backgrounds/Inside BCKGD.png" type="Texture" id=55]
[ext_resource path="res://Assets/Puzzle Pier/NightRect.jpg" type="Texture" id=60]
[ext_resource path="res://Assets/General/Tiles/wood tile b.png" type="Texture" id=65]
[ext_resource path="res://Assets/General/Tiles/wood tile a.png" type="Texture" id=66]

[sub_resource type="TileSet" id=1]
0/name = "wood tile a.png 0"
0/texture = ExtResource( 66 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wood tile b.png 1"
1/texture = ExtResource( 65 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="WorldRoot" type="Node2D"]
script = ExtResource( 35 )

[node name="YSort" type="YSort" parent="."]

[node name="Shadows" type="Node2D" parent="YSort"]
visible = false

[node name="CircleShadowSmall" type="Sprite" parent="YSort/Shadows"]
self_modulate = Color( 1, 1, 1, 0.666667 )
position = Vector2( -51, -272 )
scale = Vector2( 0.875301, 0.941929 )
texture = ExtResource( 28 )

[node name="RectangleShadowSmall" type="Sprite" parent="YSort/Shadows"]
self_modulate = Color( 1, 1, 1, 0.568627 )
position = Vector2( 2181, 793 )
rotation = -0.0312647
scale = Vector2( 1.29051, 1.57289 )
texture = ExtResource( 39 )

[node name="SquareShadow" type="Sprite" parent="YSort/Shadows"]
self_modulate = Color( 1, 1, 1, 0.333333 )
position = Vector2( 1270, 333 )
rotation = 0.0987094
scale = Vector2( 2.39921, 1.93583 )
texture = ExtResource( 32 )

[node name="Background" type="Node2D" parent="YSort"]
z_index = -20

[node name="DayBckgd" type="Sprite" parent="YSort/Background"]
modulate = Color( 1, 1, 0.972549, 1 )
position = Vector2( 617, 282 )
scale = Vector2( 3.81737, 2.76094 )
texture = ExtResource( 53 )

[node name="NightBckgd" type="Sprite" parent="YSort/Background"]
modulate = Color( 0.831373, 0.87451, 0.745098, 0.933333 )
position = Vector2( 687, 302 )
scale = Vector2( 2.4616, 1.75777 )
texture = ExtResource( 55 )

[node name="PierStake5" type="Sprite" parent="YSort/Background"]
position = Vector2( 332, 241 )
scale = Vector2( 1.23, 0.7 )
texture = ExtResource( 52 )

[node name="PierStake4" type="Sprite" parent="YSort/Background"]
position = Vector2( 258, 61 )
scale = Vector2( 1.32998, 0.9 )
texture = ExtResource( 52 )

[node name="PierStake" type="Sprite" parent="YSort/Background"]
position = Vector2( 223, 259 )
scale = Vector2( 1.32998, 0.9 )
texture = ExtResource( 52 )

[node name="PierStake2" type="Sprite" parent="YSort/Background"]
position = Vector2( -72, 144 )
scale = Vector2( 1.32998, 0.9 )
texture = ExtResource( 52 )

[node name="PierStake3" type="Sprite" parent="YSort/Background"]
position = Vector2( 73, 105 )
scale = Vector2( 1.32998, 0.9 )
texture = ExtResource( 52 )

[node name="Floor" type="Node2D" parent="YSort"]
z_index = -10

[node name="Boardwalk3" type="TileMap" parent="YSort/Floor"]
modulate = Color( 0.960784, 0.992157, 0.992157, 1 )
position = Vector2( -55.5, 47.5 )
z_index = -5
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 63, 31 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -589825, 1, 0, -655360, 1, 0, -655359, 1, 0, -655358, 1, 0, -524289, 1, 0, -589824, 1, 0, -589823, 1, 0, -589822, 1, 0, -458753, 1, 0, -524288, 1, 0, -524287, 1, 0, -524286, 1, 0, -393217, 1, 0, -458752, 1, 0, -458751, 1, 0, -458750, 1, 0, -327681, 1, 0, -393216, 1, 0, -393215, 1, 0, -393214, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -196599, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0 )

[node name="Boardwalk2" type="TileMap" parent="YSort/Floor"]
modulate = Color( 0.960784, 0.992157, 0.992157, 1 )
position = Vector2( -55.5, 42.5 )
z_index = -5
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 63, 31 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -589825, 1, 0, -655360, 1, 0, -655359, 1, 0, -655358, 1, 0, -524289, 1, 0, -589824, 1, 0, -589823, 1, 0, -589822, 1, 0, -458753, 1, 0, -524288, 1, 0, -524287, 1, 0, -524286, 1, 0, -393217, 1, 0, -458752, 1, 0, -458751, 1, 0, -458750, 1, 0, -327681, 1, 0, -393216, 1, 0, -393215, 1, 0, -393214, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -196599, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0 )

[node name="Boardwalk" type="TileMap" parent="YSort/Floor"]
modulate = Color( 0.960784, 0.992157, 0.992157, 1 )
position = Vector2( -55.5, 41.5 )
z_index = -5
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 63, 31 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -589825, 1, 0, -655360, 1, 0, -655359, 1, 0, -655358, 1, 0, -524289, 1, 0, -589824, 1, 0, -589823, 1, 0, -589822, 1, 0, -458753, 1, 0, -524288, 1, 0, -524287, 1, 0, -524286, 1, 0, -393217, 1, 0, -458752, 1, 0, -458751, 1, 0, -458750, 1, 0, -327681, 1, 0, -393216, 1, 0, -393215, 1, 0, -393214, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -196599, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0 )

[node name="MiddleGround" type="Node2D" parent="YSort"]

[node name="Fence" type="Node2D" parent="YSort/MiddleGround"]
position = Vector2( 377, -187 )

[node name="Fence_B7" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -185, 68 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 0.5, 1.3 )
texture = ExtResource( 47 )
texture_scale = Vector2( 1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_B6" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -233, 92 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 0.5, 1.3 )
texture = ExtResource( 47 )
texture_scale = Vector2( 1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_B5" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -281, 115 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 0.5, 1.3 )
texture = ExtResource( 47 )
texture_scale = Vector2( 1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_B4" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -329, 138 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 0.5, 1.3 )
texture = ExtResource( 47 )
texture_scale = Vector2( 1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_B3" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -377, 162 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 0.5, 1.3 )
texture = ExtResource( 47 )
texture_scale = Vector2( 1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_B2" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -425, 185 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 0.5, 1.3 )
texture = ExtResource( 47 )
texture_scale = Vector2( 1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_B" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -473, 209 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 0.5, 1.3 )
texture = ExtResource( 47 )
texture_scale = Vector2( 1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_S27" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -60, 126 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( -62, 30 )
grid_size = Vector2( 1.4, 0.5 )
texture = ExtResource( 33 )
texture_scale = Vector2( -1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_S28" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -108, 150 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( -62, 30 )
grid_size = Vector2( 1.4, 0.5 )
texture = ExtResource( 33 )
texture_scale = Vector2( -1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_S29" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -155, 175 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( -62, 30 )
grid_size = Vector2( 1.4, 0.5 )
texture = ExtResource( 33 )
texture_scale = Vector2( -1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_S22" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -203, 199 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( -62, 30 )
grid_size = Vector2( 1.4, 0.5 )
texture = ExtResource( 33 )
texture_scale = Vector2( -1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_S23" parent="YSort/MiddleGround/Fence" instance=ExtResource( 34 )]
position = Vector2( -248, 222 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( -62, 30 )
grid_size = Vector2( 1.4, 0.5 )
texture = ExtResource( 33 )
texture_scale = Vector2( -1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Streetlamps" type="Node2D" parent="YSort/MiddleGround"]
position = Vector2( 1, -8 )

[node name="Streetlamp_A" parent="YSort/MiddleGround/Streetlamps" instance=ExtResource( 13 )]
position = Vector2( -83, 49 )
texture_scale = Vector2( -1, 1 )

[node name="Fence_A25" parent="YSort/MiddleGround" instance=ExtResource( 34 )]
position = Vector2( -79, 48 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 1.3, 0.5 )
texture = ExtResource( 33 )
texture_scale = Vector2( 1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_A26" parent="YSort/MiddleGround" instance=ExtResource( 34 )]
position = Vector2( -34, 73 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 1.3, 0.5 )
texture = ExtResource( 33 )
texture_scale = Vector2( 1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_A27" parent="YSort/MiddleGround" instance=ExtResource( 34 )]
position = Vector2( 14, 99 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 1.3, 0.5 )
texture = ExtResource( 33 )
texture_scale = Vector2( 1.3, 1.35 )
texture_offset = Vector2( 1, -3 )
height = 70.0
depth_test_offset = Vector3( 800, -600, 0 )
preview_collision_box = false

[node name="Fence_A28" parent="YSort/MiddleGround" instance=ExtResource( 34 )]
position = Vector2( 185, 51 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 1.3, 0.5 )
texture = ExtResource( 33 )
texture_scale = Vector2( 1.3, 1.35 )
texture_offset = Vector2( -5, 2 )
height = 70.0
preview_collision_box = false

[node name="FB_A" parent="YSort/MiddleGround" instance=ExtResource( 34 )]
position = Vector2( 135, 55 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 1.37, 1.17 )
texture = ExtResource( 44 )
texture_offset = Vector2( 2, 10 )
height = 100.0
depth_test_offset = Vector3( 0, -500, 0 )
preview_collision_box = false

[node name="BBox8" parent="YSort/MiddleGround" instance=ExtResource( 34 )]
visible = false
position = Vector2( -36, 25 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 30 )
grid_size = Vector2( 1, 2 )
texture_scale = Vector2( 0.8, 0.8 )
texture_offset = Vector2( 0, 15 )
height = 300.0

[node name="Bench A3" parent="YSort/MiddleGround" instance=ExtResource( 34 )]
modulate = Color( 0.988235, 0.988235, 0.992157, 1 )
position = Vector2( -54, 20 )
__meta__ = {
"_editor_description_": ""
}
tile_size = Vector2( 62, 25 )
grid_size = Vector2( 1.1, 3 )
texture = ExtResource( 41 )
texture_scale = Vector2( -1.2, 1.3 )
texture_offset = Vector2( 7, 25 )
height = 110.0
depth_test_offset = Vector3( 0, -500, 0 )

[node name="Foreground" type="Node2D" parent="YSort"]
visible = false
z_index = 20

[node name="NightRect" type="Sprite" parent="YSort"]
visible = false
modulate = Color( 1, 1, 1, 0.0980392 )
position = Vector2( 670.5, 301.5 )
scale = Vector2( 3.781, 2.725 )
z_index = 4096
texture = ExtResource( 60 )

[node name="CollisionRoot" type="Node2D" parent="."]
visible = false

[node name="Navmesh2" parent="CollisionRoot" instance=ExtResource( 23 )]

[node name="NavmeshLayer" parent="CollisionRoot/Navmesh2" instance=ExtResource( 25 )]
polygon = PoolVector2Array( -113, 36, 227, -131, 354, -70, 174, 18, 108, 46, 152, 49, 351, 149, 227, 202 )

[node name="PlayerSpawnFromCherryTrail1" parent="CollisionRoot" instance=ExtResource( 26 )]
position = Vector2( 431, 91 )
door_name = "PivotTown1_PivotTown2"
direction = Vector2( -1, 1 )

[node name="PlayerSpawnFromCherryTrail2" parent="CollisionRoot" instance=ExtResource( 26 )]
position = Vector2( 327, -134 )
door_name = "CherryTrail3_4"
direction = Vector2( -1, -1 )

[node name="Needlepoint Path" parent="." instance=ExtResource( 27 )]
visible = false
position = Vector2( -414, -259 )
script = ExtResource( 30 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Needlepoint Path"]
polygon = PoolVector2Array( 23, -44, 49, -35, -39, -1, -59, -12 )
disabled = true

[node name="PivotTown1" parent="." instance=ExtResource( 27 )]
position = Vector2( 480, 138 )
rotation = 0.0231584
script = ExtResource( 30 )
target_scene = "res://Areas/Pivot Town/Pivot_Town_1.tscn"
exit_name = "PivotTown2_PivotTown1"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PivotTown1"]
polygon = PoolVector2Array( 24.7657, -53.5879, 46.9682, -45.0997, -48.1724, -6.88636, -70.3518, -14.3748 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
position = Vector2( -235, -234 )
z_index = 4096
current = true
script = ExtResource( 36 )
minPos = Vector2( -900, -1000 )
maxPos = Vector2( 2145, 1300 )
follow_player = true

[node name="Info_Window" type="Sprite" parent="Camera2D"]
visible = false
modulate = Color( 1, 1, 1, 0.6 )
position = Vector2( -186, -232 )
scale = Vector2( 0.7, 0.8 )
z_index = 3
texture = ExtResource( 29 )

[node name="First_Text" type="Label" parent="Camera2D/Info_Window"]
margin_left = -147.143
margin_top = -11.0
margin_right = 98.857
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.2, 1.1 )
custom_fonts/font = ExtResource( 31 )
text = "You got a Flummery Flambe!"
align = 1

[node name="Item_Interact" type="Area2D" parent="."]
visible = false
position = Vector2( 309, -145 )
script = ExtResource( 54 )
item_name = "Picnic Pie"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Item_Interact"]
position = Vector2( -47.3501, 124.25 )
polygon = PoolVector2Array( -85.6499, -125.25, -48.6499, -118.25, -39.6499, -103.25, -41.6499, -92.25, -51.6499, -79.25, -78.6499, -70.25, -103.65, -70.25, -124.65, -76.25, -139.65, -85.25, -138.65, -101.25, -131.65, -110.25, -114.65, -122.25 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 2276, 1175 )

[connection signal="item_get" from="Item_Interact" to="Camera2D" method="_on_Item_Interact_item_get"]
